force-app/main/default/objects/HelpReadingListEntry__c/HelpReadingListEntry__c.object-meta.xml
<CustomObject>
    <description>A join object placing a Help Topic into a Help Reading List with a Reading Order</description>
    <label>Help Reading List Entry</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Help Reading List Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Reading List Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>