force-app/main/default/objects/HelpReadingListEntry__c/fields/DisplayColumn__c.field-meta.xml
<CustomField>
    <fullName>DisplayColumn__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For entries that form part of a Page Guide, the column within the layout &apos;grid&apos; at which to display the Topic featured in this entry</description>
    <inlineHelpText>For entries that form part of a Page Guide, the column within the layout &apos;grid&apos; at which to display the Topic featured in this entry</inlineHelpText>
    <label>Display Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>