force-app/main/default/objects/HelpReadingListEntry__c/fields/HelpReadingList__c.field-meta.xml
<CustomField>
    <fullName>HelpReadingList__c</fullName>
    <inlineHelpText>The Help Reading List that contains this Help Topic as an Entry</inlineHelpText>
    <label>Help Reading List</label>
    <referenceTo>HelpReadingList__c</referenceTo>
    <relationshipName>HelpReadingListTopics</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>