force-app/main/default/objects/HelpReadingListEntry__c/fields/HelpTopic__c.field-meta.xml
<CustomField>
    <fullName>HelpTopic__c</fullName>
    <inlineHelpText>The Help Topic in this Help Reading List Entry</inlineHelpText>
    <label>Help Topic</label>
    <referenceTo>HelpTopic__c</referenceTo>
    <relationshipLabel>Help Reading List Entries</relationshipLabel>
    <relationshipName>HelpReadingListTopics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>