force-app/main/default/objects/HelpReadingListEntry__c/fields/NavigationDetails__c.field-meta.xml
<CustomField>
    <fullName>NavigationDetails__c</fullName>
    <description>For entries that form part of a Page Guide and a Navigation Type is specified, supporting details concerning the navigation that is to occur as this step is selected</description>
    <inlineHelpText>For entries that form part of a Page Guide and a Navigation Type is specified, supporting details concerning the navigation that is to occur as this step is selected</inlineHelpText>
    <label>Navigation Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>