force-app/main/default/objects/HelpReadingListEntry__c/fields/NavigationType__c.field-meta.xml
<CustomField>
    <fullName>NavigationType__c</fullName>
    <description>For entries that form part of a Page Guide, the type, if any, of navigation that is to occur as this step is selected</description>
    <inlineHelpText>For entries that form part of a Page Guide, the type, if any, of navigation that is to occur as this step is selected</inlineHelpText>
    <label>Navigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Listview</fullName>
            </value>
            <value>
                <fullName>Record - New</fullName>
            </value>
            <value>
                <fullName>Record - Edit</fullName>
            </value>
            <value>
                <fullName>Record - View</fullName>
            </value>
            <value>
                <fullName>Standard Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>