force-app/main/default/objects/HelpReadingListEntry__c/fields/ReadingListFeaturedUntil__c.field-meta.xml
<CustomField>
    <fullName>ReadingListFeaturedUntil__c</fullName>
    <formula>HelpReadingList__r.FeaturedUntil__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reading List Featured Until</label>
    <type>Date</type>
</CustomField>