force-app/main/default/objects/HelpReadingListEntry__c/fields/ReadingOrder__c.field-meta.xml
<CustomField>
    <fullName>ReadingOrder__c</fullName>
    <inlineHelpText>The Reading Order of this Help Reading List Entry - edited through the custom visual force Manage Reading List page</inlineHelpText>
    <label>Reading Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>